minor translations fixes

--- a/unexe/templates/usecase/c_uc3.3.html
+++ b/unexe/templates/usecase/c_uc3.3.html
@@ -169,19 +169,19 @@ function c_uc33toggle()
 		<select id="c_uc33year" class="form-control" required="true"></select>
 		-->
 		<label class="radio inline c_uc33period">
-			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="season" onchange="c_uc33toggle();" /> Select Season
+			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="season" onchange="c_uc33toggle();" /> {% trans "Select Season" %}
 		</label>		
 		<label class="radio inline c_uc33period">
-			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="days"  onchange="c_uc33toggle();" /> Specify Period
+			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="days"  onchange="c_uc33toggle();" /> {% trans "Specify Period" %}
 		</label>
 		<label class="radio inline c_uc33period">
-			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="3" onclick="c_uc33toggle();"/> Last 3 Months
+			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="3" onclick="c_uc33toggle();"/> {% trans "Last 3 Months" %}
 		</label>
 		<label class="radio inline c_uc33period">
-			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="6" onclick="c_uc33toggle();"/> Last 6 Months
+			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="6" onclick="c_uc33toggle();"/> {% trans "Last 6 Months" %}
 		</label>		
 		<label class="radio inline c_uc33period">
-			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="12" onclick="c_uc33toggle();"/> Last 12 Months
+			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="12" onclick="c_uc33toggle();"/> {% trans "Last 12 Months" %}
 		</label>	
 		<script>
 			function compare_uc33() {
