--- a/unexe/templates/usecase/c_uc3.2.html
+++ b/unexe/templates/usecase/c_uc3.2.html
@@ -170,7 +170,7 @@ function c_uc32disabled()
 			}
 		</script>
 		{% if not "PT" in user.username %}
-			<button onclick="load_uc32('{{ request.user.username }}')" class="btn btn-primary" type="button">View Charts</button>
+			<button onclick="load_uc32('{{ request.user.username }}')" class="btn btn-primary" type="button">{% trans "View Charts" %}</button>
 		{% endif %}		
 		</form>     		
 		</div>
@@ -179,10 +179,10 @@ function c_uc32disabled()
 	 <div class="row">
 	 	<div class="form-inline col-md-6 hide" id="c_uc32_season">
 			<select id="c_uc32_seasons" class="form-control" required="true">
-			<option value="summer">Summer</option>
-			<option value="winter">Winter</option>
-			<option value="autumn">Autumn</option>
-			<option value="spring">Spring</option>			
+			<option value="summer">{% trans "Summer" %}</option>
+			<option value="winter">{% trans "Winter" %}</option>
+			<option value="autumn">{% trans "Autumn" %}</option>
+			<option value="spring">{% trans "Spring" %}</option>
 			</select>
 			<select id="c_uc32_seasonyear" class="form-control" required="true">
                 {% for yr in yearlist %}
@@ -193,18 +193,18 @@ function c_uc32disabled()
 		<div class="form-inline col-md-6 hide" id="c_uc32_daterange">
 		 	<div class="form-group">
 			<select id="c_uc32stmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+			<option value="1">{% trans "January" %}</option>
+			<option value="2">{% trans "February" %}</option>
+			<option value="3">{% trans "March" %}</option>
+			<option value="4">{% trans "April" %}</option>
+			<option value="5">{% trans "May" %}</option>
+			<option value="6">{% trans "June" %}</option>
+			<option value="7">{% trans "July" %}</option>
+			<option value="8">{% trans "August" %}</option>
+			<option value="9">{% trans "September" %}</option>
+			<option value="10">{% trans "October" %}</option>
+			<option value="11">{% trans "November" %}</option>
+			<option value="12">{% trans "December" %}</option>
 			</select>
 			</div>
 			<div class="form-group">
@@ -217,18 +217,18 @@ function c_uc32disabled()
 			TO
 		 	<div class="form-group">
 			<select id="c_uc32endmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+			<option value="1">{% trans "January" %}</option>
+			<option value="2">{% trans "February" %}</option>
+			<option value="3">{% trans "March" %}</option>
+			<option value="4">{% trans "April" %}</option>
+			<option value="5">{% trans "May" %}</option>
+			<option value="6">{% trans "June" %}</option>
+			<option value="7">{% trans "July" %}</option>
+			<option value="8">{% trans "August" %}</option>
+			<option value="9">{% trans "September" %}</option>
+			<option value="10">{% trans "October" %}</option>
+			<option value="11">{% trans "November" %}</option>
+			<option value="12">{% trans "December" %}</option>
 			</select>
 			</div>		
 		 	<div class="form-group">
