--- a/unexe/templates/usecase/c_uc3.3.html
+++ b/unexe/templates/usecase/c_uc3.3.html
@@ -192,7 +192,7 @@ function c_uc33toggle()
 			}
 		</script>
 		{% if not "PT" in request.user.username %}
-			<button onclick="load_uc33('{{ request.user.username }}')" class="btn btn-primary" type="button">View Charts</button>
+			<button onclick="load_uc33('{{ request.user.username }}')" class="btn btn-primary" type="button">{% trans "View Charts" %}</button>
 		{% endif %}
 		</form>     
 		</div>
@@ -201,28 +201,28 @@ function c_uc33toggle()
 	 <div class="row" id="_uc33_daterange">
 	 	<div class="form-inline col-md-6 hide" id="c_uc33_season">
 			<select id="c_uc33_seasons" class="form-control" required="true">
-			<option value="summer">Summer</option>
-			<option value="winter">Winter</option>
-			<option value="autumn">Autumn</option>
-			<option value="spring">Spring</option>			
+			<option value="summer">{% trans "Summer" %}</option>
+			<option value="winter">{% trans "Winter" %}</option>
+			<option value="autumn">{% trans "Autumn" %}</option>
+			<option value="spring">{% trans "Spring" %}</option>
 			</select>
 			<select id="c_uc33_seasonyear" class="form-control" required="true"></select>	 				 	
 	 	</div>	 
 		<div class="form-inline col-md-6 hide" id="c_uc33_daterange">
 		 	<div class="form-group">
 			<select id="c_uc33stmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+			<option value="1">{% trans "January" %}</option>
+			<option value="2">{% trans "February" %}</option>
+			<option value="3">{% trans "March" %}</option>
+			<option value="4">{% trans "April" %}</option
+			<option value="5">{% trans "May" %}</option>
+			<option value="6">{% trans "June" %}</option>
+			<option value="7">{% trans "July" %}</option>
+			<option value="8">{% trans "August" %}</option>
+			<option value="9">{% trans "September" %}</option>
+			<option value="10">{% trans "October" %}</option>
+			<option value="11">{% trans "November" %}</option>
+			<option value="12">{% trans "December" %}</option>
 			</select>
 			</div>
 			<div class="form-group">
@@ -233,18 +233,18 @@ function c_uc33toggle()
 			TO
 		 	<div class="form-group">
 			<select id="c_uc33endmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+			<option value="1">{% trans "January" %}</option>
+			<option value="2">{% trans "February" %}</option>
+			<option value="3">{% trans "March" %}</option>
+			<option value="4">{% trans "April" %}</option>
+			<option value="5">{% trans "May" %}</option>
+			<option value="6">{% trans "June" %}</option>
+			<option value="7">{% trans "July" %}</option>
+			<option value="8">{% trans "August" %}</option>
+			<option value="9">{% trans "September" %}</option>
+			<option value="10">{% trans "October" %}</option>
+			<option value="11">{% trans "November" %}</option>
+			<option value="12">{% trans "December" %}</option>
 			</select>
 			</div>		
 		 	<div class="form-group">
