--- a/uc_03_1/templates/_charts_.html
+++ b/uc_03_1/templates/_charts_.html
@@ -212,8 +212,8 @@
 
     {% if view == 'summer_winter' %}
         $.plot("#placeholder", [
-                { label: "{% trans 'Summer Consumption in' %} {{ unit|safe }}", data: [ [1, {{ summer_total|floatformat:2 }}] ] },
-                { label: " {% trans 'Winter Consumption in' %} {{ unit|safe }}", data: [ [2, {{ winter_total|floatformat:2 }}] ] }
+                { label: "{% trans 'Summer Consumption' %} ({{ unit|safe }})", data: [ [1, {{ summer_total|floatformat:2 }}] ] },
+                { label: " {% trans 'Winter Consumption' %} ({{ unit|safe }})", data: [ [2, {{ winter_total|floatformat:2 }}] ] }
             ],
             {
                 series: {
@@ -252,8 +252,8 @@
             });
         {% if summer_total2 and winter_total2 %}
             $.plot("#placeholder2", [
-                        { label: "{% trans 'Summer Consumption in' %} {{ unit|safe }}", data: [ [1, {{ summer_total2|floatformat:2 }}] ] },
-                        { label: "{% trans 'Winter Consumption in' %} {{ unit|safe }}", data: [ [2, {{ winter_total2|floatformat:2 }}] ] }
+                        { label: "{% trans 'Summer Consumption' %} ({{ unit|safe }})", data: [ [1, {{ summer_total2|floatformat:2 }}] ] },
+                        { label: "{% trans 'Winter Consumption' %} ({{ unit|safe }})", data: [ [2, {{ winter_total2|floatformat:2 }}] ] }
                     ],
                     {
                         series: {
@@ -292,14 +292,14 @@
                     });
         {% endif %}
     {% else %}
-        total_label = " {% trans 'Total Consumption in' %} {{ unit|safe }}";
-        night_label = " {% trans 'Night Consumption in' %} {{ unit|safe }}";
-        day_label = " - {% trans 'Day Consumption in' %} {{ unit|safe }}";
+        total_label = " {% trans 'Total Consumption' %} ({{ unit|safe }})";
+        night_label = " {% trans 'Night Consumption' %} ({{ unit|safe }})";
+        day_label = " {% trans 'Day Consumption' %} ({{ unit|safe }})";
 
         {% if "cost" in step %}
-            total_label = " {% trans 'Total Consumption in' %} &euro;";
-            night_label = " {% trans 'Night Consumption in' %} &euro;";
-            day_label = " {% trans 'Day Consumption in' %} &euro;";
+            total_label = " {% trans 'Total Consumption' %} (&euro;)";
+            night_label = " {% trans 'Night Consumption' %} (&euro;)";
+            day_label = " {% trans 'Day Consumption' %} (&euro;)";
         {% endif %}
 
         {% if total_data2 %}
