--- a/unexe/templates/usecase/wateranalysis.html
+++ b/unexe/templates/usecase/wateranalysis.html
@@ -37,6 +37,32 @@
       
 $(window).load(function() {
 	//load the function when DOM is ready
+$.fn.datepicker.dates = {
+        en: {
+            days:        ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"],
+            daysShort:   ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"],
+            daysMin:     ["Su", "Mo", "Tu", "We", "Th", "Fr", "Sa", "Su"],
+            months:      ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"],
+            monthsShort: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
+            meridiem:    ["am", "pm"],
+            suffix:      ["st", "nd", "rd", "th"],
+            today:       "Today"
+        },
+        nl: {
+            days: ["Zondag", "Maandag", "Dinsdag", "Woensdag", "Donderdag", "Vrijdag", "Zaterdag", "Zondag"],
+            daysShort: ["Zo", "Ma", "Di", "Wo", "Do", "Vr", "Za", "Zo"],
+            daysMin: ["Zo", "Ma", "Di", "Wo", "Do", "Vr", "Za", "Zo"],
+            months: ["Januari", "Februari", "Maart", "April", "Mei", "Juni", "Juli", "Augustus", "September", "Oktober", "November", "December"],
+            monthsShort: ["Jan", "Feb", "Mrt", "Apr", "Mei", "Jun", "Jul", "Aug", "Sep", "Okt", "Nov", "Dec"],
+            today: "Vandaag",
+            suffix: [],
+            meridiem: []
+        }
+    };
+
+    $(".bfh-datepicker").datepicker({
+        language: 'nl'
+    });
 
     $('.chart-selector').change(function(event){
     	var optionValues = [];
