--- a/unexe/templates/usecase/inner_c_uc3.2.html
+++ b/unexe/templates/usecase/inner_c_uc3.2.html
@@ -56,7 +56,7 @@
 	<div class="col-md-7" id="c_uc32chart"></div>
 	<div class="col-md-5" id="c_uc32summary">
 	    <div class="panel panel-primary">
-	        <div class="panel-heading">{% trans "AREA SUMMARY" %}</div>
+	        <div class="panel-heading">{% trans "AREA SUMMARY" %}<p>{% trans "(other households in your DMA)" %}</p></div>
 	        <ul class="list-group list-group-flush">
 		        <li class="list-group-item" id="c_uc32Yearly"></li>
 		        <li class="list-group-item" id="c_uc32Half"></li>
