--- a/unexe/templates/usecase/inner_c_uc3.2_compare.html
+++ b/unexe/templates/usecase/inner_c_uc3.2_compare.html
@@ -10,7 +10,7 @@
 	<div class="col-md-4" id="c_uc32donutchart"></div>
 	<div class="col-md-3">
 	    <div class="panel panel-primary">
-	        <div class="panel-heading">{% trans "AREA SUMMARY" %}</div>
+	        <div class="panel-heading">{% trans "AREA SUMMARY" %}<p>{% trans "(other households in your DMA)" %}</p></div>
 	        <ul class="list-group list-group-flush text-center">
 	            <li id="c_uc32household" class="list-group-item"></li>
 	            <li id="c_uc32occupant" class="list-group-item"></li>
