--- a/unexe/templates/superusers.html
+++ b/unexe/templates/superusers.html
@@ -1,25 +1,53 @@
 {% extends "sidebar.html" %}
 {% load i18n %}
+{% load sekizai_tags %}
 {% load general_tags %}
 {% block pagetitle %}{% trans "Administrator Control Panel" %}{% endblock %}
 {% block pagecontent %}
-<div class="col-md-9">
-<div class="panel panel-default">
-	<div class="panel-heading"><div class="panel-title">{% trans " Home" %}</div></div>
-	<div class="panel-body">
-	<div class="row">
-	    <div class="col-md-12"> 
-		<div class="panel panel-primary">
-	        <div class="panel-heading">
-	           <span class="glyphicon glyphicon-info-sign"></span> <strong>{% trans "Administrator Control Panel" %}</strong>
-	        </div>
-	        <div class="panel-body">
-	        	{% trans "Welcome to Administrator control panel. Here you can view DMA details and assess policy effects. Please use the side menu bar to navigate" %}.
-	        </div>
-        </div>
+    <div class="col-md-9">
+        <div class="panel panel-default">
+            <div class="panel-heading"><div class="panel-title">{% trans " Home" %}</div></div>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">
+                                <span class="glyphicon glyphicon-info-sign"></span> <strong>{% trans "Administrator Control Panel" %}</strong>
+                            </div>
+                            <div class="panel-body">
+                                <p>{% trans "Welcome to Administrator control panel. Here you can view DMA details and assess policy effects. Please use the side menu bar to navigate" %}.</p>
+                                <p>{% trans "Please, select the country you would like to view usage data." %}</p>
+                                <p>
+                                    <button class="btn btn-primary" onclick="showUsageData('GB');">Great Britain</button>
+                                    <button class="btn btn-primary" onclick="showUsageData('GR');">Greece</button>
+                                    <button class="btn btn-primary" onclick="showUsageData('PT');">Portugal</button>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">
+                                <span class="glyphicon glyphicon-signal"></span>
+                                {% trans "Usage Data" %}
+                            </div>
+                            <div class="panel-body" id="usage-data-table">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    </div>
-	</div>
-</div>
+
+    {% addtoblock "js" %}
+    <script>
+        function addUsageData(ctr){
+            $("#usage-data-table").load("/data/usage/" + ctr + "/?p=1")
+        }
+    </script>
+    {% endaddtoblock %}
 {% endblock %}
