--- a/iw_admin/templates/_usage_data.html
+++ b/iw_admin/templates/_usage_data.html
@@ -5,6 +5,7 @@
     <tr>
         <th>Username</th>
         <th>Last Access</th>
+        <th>Logins</th>
         <th>Water Start</th>
         <th>Water End</th>
         <th>Energy Start</th>
@@ -18,6 +19,7 @@
         <td>{{ user.username }}</td>
         {% with data|dict_get:user.id as arr %}
             <td>{{ arr.8|date:"Y-m-d h:i" }}</td>
+            <td>{{ arr.9 }}</td>
             <td>{{ arr.1 }}</td>
             <td>{{ arr.2 }}</td>
             <td>{{ arr.3 }}</td>
