--- a/unexe/templates/base.html
+++ b/unexe/templates/base.html
@@ -150,7 +150,9 @@ $(window).load(function() {
 	{% endif %}
 
     //Added by Chris Pantazis to load the events table.
-    $("#user_events").load("{% url 'user_events' request.user.username %}?f=new");
+    {% if request.user.is_authenticated %}
+        $("#user_events").load("{% url 'user_events' request.user.username %}?f=new");
+    {% endif %}
 
 });
 
