e-diary UI changes.

--- a/unexe/templates/summary.html
+++ b/unexe/templates/summary.html
@@ -189,4 +189,10 @@
         </div>
     </div>
     {% endif %}
+    <div class="" id="ediary"></div> <!-- e-diary -->
+    <script>
+    	$(document).ready(function() {
+    		$('#ediary').load('/ediary/get/');    		
+    	});
+    </script>
 {% endblock %}	               
